[package]
name = "irq_safety"
version = "0.1.1"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]

description = "A series of utilities that can be used to safely protect objects used within an interrupt handler or other IRQ context."
keywords = ["no_std", "kernel", "interrupts", "irq", "x86", "x86_64", "amd64", "lock", "mutex"]
license = "MIT"

[dependencies]
spin = "0.4.5"

[dependencies.stable_deref_trait]
git = "https://github.com/kevinaboos/stable_deref_trait.git"
branch = "spin"
default-features = false
features = [ "alloc", "spin" ]

[dependencies.owning_ref]
# version = "0.3.3"
# path = "../../libs/owning-ref-rs"
git = "https://github.com/kevinaboos/owning-ref-rs.git"


[features]
const_fn = []
default = [ "const_fn" ]
